--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.0",
     "words-to-numbers": "^1.5.1"
