--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-floating-action": "^1.21.0",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
+    "reactjs-popup": "^2.0.4",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.0",
     "words-to-numbers": "^1.5.1"
